--- a/blocks/hero/style.css
+++ b/blocks/hero/style.css
@@ -9,7 +9,7 @@
 	background-size: cover;
 	background-position: center;
 	background-color: #0a0a0a;
-	width: 100vw;
+	width: 100%;
 	max-width: 100vw;
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
@@ -337,6 +337,7 @@
 
 	.po-hero__content {
 		padding: 100px 20px 160px;
+		box-sizing: border-box;
 	}
 
 	.po-hero__headline {
@@ -355,6 +356,7 @@
 	.po-hero__button {
 		width: 100%;
 		justify-content: center;
+		box-sizing: border-box;
 	}
 
 	.po-hero__stats {
